# obinus

./: .gitignore  3  README.md  TODO.md  [  dados.db  mapa.txt  pyproject.toml  regioes.txt  temp.html
docs/empresas/: mobilibus.md  norte.md  oeste.md  serra.md  vale_itajai.md
notas/: body_praiana.md  mobilibus.md  norte.md  oeste.md  sul.md  vale_itajai.md
raspagem/: common.py  config.py  dados.db  main.py  requirements.txt  tabela.py  teste.py
raspagem/db/: db.py
raspagem/grande_floripa/: __init__.py  biguacu.py  estrela.py  fenix.py  imperatriz.py  jotur.py  santa_terezinha.py
raspagem/tabelas/: schema.sql  seed.sql
scrapers/: TODO.md  biguacu.py  common.py  estrela.py  fenix.py  imperatriz.py  jotur.py  santa_terezinha.py
src/obinus/: main.py
src/obinus/core/: base.py  (+4 more)
tests/: utils.py
tests/amostras/: fenix_horarios.html
tests/bcbus/: amostra_horarios.html  amostra_linhas.html  test_bcbus.py
tests/coletivo_rainha/: amostra_horarios.json  amostra_linhas.html  test_coletivo_rainha.py
tests/coletivo_santa_cruz/: amostra_horarios_raw.html  test_coletivo_santa_cruz.py
tests/consorcio_fenix/: amostra_horarios.html  amostra_linhas.html  test_consorcio_fenix.py
tests/expresso_coletivo_icarense/: amostra_horarios.html  amostra_linhas.html  test_expresso_coletivo_icarense.py
tests/expresso_presidente_timbo/: amostra_horarios.html  amostra_linhas.html  test_expresso_presidente_timbo.py
tests/gidion_transtusa/: amostra_horarios.json  amostra_linhas.json  test_gidion_transtusa.py
tests/grupo_forquilinhas/: amostra_horarios.html  amostra_linhas.html  test_grupo_forquilinhas.py
(+89 files in other folders)
