[project]
name = "obinus"
version = "0.1.0"
description = "Coleção de scrapers de linhas de ônibus de SC"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "bs4>=0.0.2",
  "flask>=3.1.3",
  "jmespath>=1.1.0",
  "pycryptodome>=3.23.0",
  "requests>=2.32.5",
]

[project.scripts]
raspar-tudo = "obinus.main:main"

[tool.uv]
package = true
