[project]
name = "obinus"
version = "0.1.0"
description = "Coleção de scrapers de linhas de ônibus de SC"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "bs4>=0.0.2",
  "flask>=3.1.3",
  "jmespath>=1.1.0",
  "pycryptodome>=3.23.0",
  "pytest>=9.0.2",
  "requests>=2.32.5",
  "tqdm>=4.67.3",
]

[project.scripts]
geral = "obinus.main:extrair_geral"
regiao = "obinus.main:extrair_regiao"
empresa = "obinus.main:extrair_empresa"

[tool.pytest]
addopts = ["-q", "-ra"]
minversion = "9.0"
pythonpath = ["src", "tests"]
testpaths = [
  "integration",
  "tests",
]

[tool.uv]
package = true
